store/src/styles/components/header.scss
.hern-header {
   height: var(--hern-navigation-menu-height);
   z-index: 1000;
   width: 100%;
   background-color: rgba(255, 255, 255, 1);
   position: sticky;
   top: 0;
   left: 0;
   right: 0;
}
.hern-header__top {
   width: 100%;
   display: flex;
   border-bottom-width: 1px;
   align-items: center;
   height: 64px;
   @media (min-width: 768px) {
      grid-template-columns: auto auto 1fr auto;
   }
}
.hern-header--grid-3-col {
   grid-template-columns: auto 1fr auto !important;
}
.hern-header__brand {
   height: 100%;
   padding-left: 0.5rem;
   padding-right: 0.5rem;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-align-items: center;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
   > img {
      max-height: 54px;
   }
   > span {
      margin-left: 0.5rem;
   }

   @media (min-width: 768px) {
      padding-left: 1.5rem;
      padding-right: 1.5rem;
   }
}
.hern-header__brand__logo {
   display: none;
   @media (min-width: 600px) {
      display: block;
   }
}
.hern-header__brand__logo--sm {
   display: block;
   max-height: 54px;
   @media (min-width: 600px) {
      display: none;
   }
}

.hern-header__auth {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
   display: flex;
   // justify-content: center;
   align-items: center;
   // margin-left: auto;
   @media (min-width: 768px) {
      margin-left: unset;
      padding-left: 1rem;
      padding-right: 1rem;
   }
}

.hern-header__logout {
   background-color: rgba(37, 99, 235, 1);
   color: rgba(255, 255, 255, 1);
   border-radius: 0.25rem;
   padding-left: 0.5rem;
   padding-right: 0.5rem;
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
   transition: all 0.3s ease;
   white-space: nowrap;
   &:focus {
      outline: none;
   }
   &:hover {
      opacity: 0.7;
   }
   @media (min-width: 768px) {
      width: auto;
   }
}
.hern-header__menu-btn {
   border-radius: 0.25rem;
   padding-left: 0.5rem;
   padding-right: 0.5rem;
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
   display: inline-block;
   margin-left: 0.5rem;

   &:focus {
      outline: none;
   }
   &:hover {
      opacity: 0.7;
   }
   @media (min-width: 768px) {
      display: none;
   }
}
.hern-header__logout-btn {
   color: rgba(220, 38, 38, 1);
   border-radius: 0.25rem;
   padding-left: 0.5rem;
   padding-right: 0.5rem;
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
   &:focus {
      outline: none;
   }
   &:hover {
      opacity: 0.7;
   }
}
.hern-header__login-btn--rounded {
   border-radius: 16px;
   padding: 4px 16px;
}
.hern-navigatin-menu__wrapper {
   display: none;
   align-items: center;
   justify-content: space-between;
   margin-left: auto;
   @media (min-width: 768px) {
      display: flex;
   }
}
.hern-navigatin-menu__wrapper--mobile {
   position: absolute;
   display: block;
   padding-left: 1rem;
   padding-right: 1rem;
   --tw-bg-opacity: 1;
   background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
   width: 100%;
   top: auto;
   list-style-type: none;
   -webkit-transition-property: all;
   transition-property: all;
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   -webkit-transition-duration: 200ms;
   transition-duration: 200ms;
   @media (min-width: 768px) {
      display: none;
   }
}
.hern-header__location-container {
   display: flex;
   align-items: center;
   padding: 4px;
   cursor: pointer;
   @media (max-width: 768px) {
      padding: 6px 0;
   }
}
.hern-header__location-icon {
   margin: 0 5px;
}
.hern-header__location-upper {
   width: 120px;
   display: flex;
   align-items: center;
   margin: 2px 0;
}
.hern-header__location-content {
   color: #40404099;
   margin: 2px 0;
   max-width: 400px !important;
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
   @media only screen and (max-width: 600px) {
      width: 150px !important;
   }
   @media (max-width: 768px) {
      font-size: 11px;
      font-size: 11px;
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
      width: 250px;
   }
}
.hern-header__location-warning {
   @media (max-width: 768px) {
      font-size: 9px;
   }
}
.hern-header__downvector-icon {
   margin: 0 6px;
}

.hern-header__location-right-loading {
   font-style: italic;
   color: #40404099;
   font-size: 14px;
   @media (max-width: 768) {
      font-size: 10px;
   }
}
.hern-header__location-in-navbar {
   display: none;
   @media (min-width: 768px) {
      display: unset;
   }
}
.hern-header--layout-one {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 12px 0;
}
.hern-header__auth--layout-one {
   transform: translateX(-80px);
   @media screen and (max-width: 767px) {
      transform: translateX(0px);
   }
}
.hern-navbar__list--layout-one {
   padding-bottom: 12px;
   ul {
      justify-content: center;
   }
   .hern-navbar__list__item {
      font-family: 'Inter';
      font-style: normal;
      font-weight: 500;
      font-size: 18px;
      line-height: 22px;
      text-align: center;
      letter-spacing: 0.04em;
      color: #000000;
   }
}
.hern-header__location-container--layout-one {
   display: flex;
   @media screen and (max-width: 767px) {
      display: none;
   }
}
.hern-location-info--layout-one--sm {
   display: none;
   @media screen and (max-width: 767px) {
      display: flex;
      > .hern-header__location-right {
         display: flex;
      }
   }
}
.hern-navigatin-menu__wrapper--mobile--layout-one {
   z-index: 999;
}

.hern-header-stickey {
   position: sticky;
   top: 0;
   background: #fff;
   z-index: 999;
}
.hern-header--layout-two {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding-top: 12px;
}
.hern-header__location-right--layout-two {
   display: flex;
}
.hern-header__css-transition-enter {
   height: 0;
   opacity: 0;
}
.hern-header__css-transition-enter-active {
   transition: all 0.4s;
   height: auto;
   opacity: 1;
}
.hern-header__css-transition-exit {
   opacity: 1;
   height: auto;
}
.hern-header__css-transition-exit-active {
   transition: all 0.4s;
   height: 0;
   opacity: 0;
}

